--- a/server/package.json
+++ b/server/package.json
@@ -12,10 +12,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "multiparty": "^4.2.3"
+    "multiparty": "^4.2.3",
+    "pocketbase": "^0.14.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
