--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.8",
+    "@mantine/core": "^6.0.10",
+    "@mantine/dropzone": "^6.0.10",
+    "@mantine/form": "^6.0.10",
+    "@mantine/hooks": "^6.0.10",
+    "@mantine/notifications": "^6.0.10",
+    "@mantine/nprogress": "^6.0.10",
+    "@tabler/icons-react": "^2.17.0",
     "@tanstack/react-query": "^4.29.3",
     "next": "^13.2.4",
     "react": "18.2.0",
